namespace change, appsettings example add

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-﻿@using semenarna_id2
-@using semenarna_id2.Models
-@using semenarna_id2.ViewModels
+﻿@using app
+@using app.Models
+@using app.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
