--- a/Areas/Panel/_ViewImports.cshtml
+++ b/Areas/Panel/_ViewImports.cshtml
@@ -1,6 +1,6 @@
-﻿@using semenarna_id2;
-@using semenarna_id2.ViewModels
-@using semenarna_id2.Areas.Panel.ViewModels
-@using semenarna_id2.Models
+﻿@using app;
+@using app.ViewModels
+@using app.Areas.Panel.ViewModels
+@using app.Models
 @using System.Globalization;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
