--- a/Areas/Store/Views/_ViewImports.cshtml
+++ b/Areas/Store/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-﻿@using semenarna_id2.Areas.Store.ViewModels
-@using semenarna_id2.Models
+﻿@using app.Areas.Store.ViewModels
+@using app.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
