--- a/Utils/_ViewImports.cshtml
+++ b/Utils/_ViewImports.cshtml
@@ -1,6 +1,6 @@
-﻿@using semenarna_id2
-@using semenarna_id2.Models
-@using semenarna_id2.ViewModels
-@using semenarna_id2.Areas.Cart.ViewModels
+﻿@using app
+@using app.Models
+@using app.ViewModels
+@using app.Areas.Cart.ViewModels
 @using System.Globalization
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
